# ModalDerivative

./: .gitignore  CMakeLists.txt  README.md  clang-format.txt
cmake/: eigen.cmake
input/example_bar/: bar.constrainedDoFs  bar.node
input/example_bar_unconstrained/: bar.ele
src/: main.cpp  main_igl.cpp.old
src/Functions/: EigenMatrixIO.h  EigenTensorUtils.h  LoboMacros.h  computeSVDMatrix3d.cpp  eigenVecMat.hpp
src/LoboDynamic/: DynamicModel.cpp  DynamicModel.h  HyperelasticModel.cpp  HyperelasticModel.h
src/LoboDynamic/LoboVolumtricMesh/: LoboTetMesh.cpp  LoboTetMesh.h
src/LoboDynamic/materials/: TypeIsotropicMaterial.h  TypeMaterialWithCompressionResistance.cpp  TypeMaterialWithCompressionResistance.h  TypeNeoHookeanMaterial.cpp  TypeNeoHookeanMaterial.h  TypeStVKMaterial.cpp  TypeStVKMaterial.h  TypeTetElementMaterial.cpp  TypeTetElementMaterial.h
src/ModalDerivative/: LMAModel.cpp  LMAModel.hpp
src/Utils/BasicIO/: findFileWithExtension.hpp  readEleNode.hpp
src/Utils/SparseMatrix/: SparseMatrixIO.hpp  SparseMatrixRemoveRows.cpp  SparseMatrixRemoveRows.h  SparseMatrixTopology.cpp  SparseMatrixTopology.h
